<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bkgr"
    android:padding="30sp"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".AddPage" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:layout_weight="30"
            android:id="@+id/etAddWeight"
            android:layout_width="fill_parent"
            android:layout_height="40sp"
            android:layout_marginTop="25dp"
            android:background="@android:color/background_light"
            android:ems="10"
            android:inputType="number"
            android:textColor="@android:color/black" >
        </EditText>

        <Button
            android:id="@+id/bSubmitWeight"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_weight="70"
            android:text="@string/insertWeight" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/bTakePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/takePhoto"
            android:textSize="14sp" />

        <Button
            android:id="@+id/bUsePhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="50"
            android:text="@string/usePhoto"
            android:textSize="14sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/tvCurrentPhoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/currentPhoto"
        android:textColor="@android:color/white" />

    <ImageView
        android:id="@+id/ivYourPhoto"
        android:layout_width="130sp"
        android:layout_height="200sp"
        android:layout_below="@+id/tvCurrentPhoto"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/fatWoman"
         />

    <TextView
        android:id="@+id/tvInsertCurrentWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insertW"
        android:textColor="@android:color/white"
        android:textSize="16sp" />

    <TextView
        android:id="@+id/tvCurrentWeightNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tvCurrentWeight"
        android:layout_alignBottom="@+id/tvCurrentWeight"
        android:layout_toRightOf="@+id/ivYourPhoto"
        android:text=""
        android:textColor="@android:color/white" />

    <TextView
        android:id="@+id/tvCurrentWeight"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="21dp"
        android:text="@string/currentWeight"
        android:textColor="@android:color/white" />

</RelativeLayout>